samples/_failures_safe/1761002314_a4c7a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a2e4854.c: In function ‘main’:
./samples/SAFE/__tmp_7a2e4854.c:203:5: error: expected identifier or ‘(’ at end of input
  203 |     Token
      |     ^~~~~
./samples/SAFE/__tmp_7a2e4854.c:203:5: error: expected declaration or statement at end of input
